# Chainlit_template

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.chainlit/: config.toml
